testing netlify watch

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NODE_ENV=development
 # Public
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_GTM_ID=GTM-K6TW6MF
+STAGING_CMD= git promote 0ac921da-4f96-40ed-929f-da2f5c494e7d 
+PRODUCTION_CMD= git promote 4c12fabe-c77f-4fb0-9448-7d3973c4f8d2 master 
